<resources>
    <string name="app_name">Currency Converter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="convert">Convert</string>
    <string name="next">Next</string>
    <string-array name="currencies">
        <item>MAD</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>
</resources>