<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:layout_margin="20px"
        android:layout_gravity="center"
        android:id="@+id/textView"
        android:textSize="100px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:orientation="horizontal">

        <TextView
            android:textSize="80px"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/from" />

        <Spinner
            android:id="@+id/spinner_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:orientation="horizontal">

        <TextView
            android:textSize="80px"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/to" />

        <Spinner
            android:id="@+id/spinner_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:orientation="horizontal">

        <TextView
            android:textSize="80px"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="numberDecimal" />


    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:id="@+id/convert"
        android:layout_margin="20px"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="80px"
        android:layout_gravity="center"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <Button
            android:id="@+id/next"
            android:layout_margin="30px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_gravity="bottom|end"/>
    </FrameLayout>
</LinearLayout>